# CTool

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitlab-ci.yml  AGENTS.md  CBridge.c  CBridge.h  CMakeLists.txt  CTool.code-workspace  CTool.cpp  CTool.hpp  Makefile  README.md  cspell.json  format.sh  gitversion.env  libctool.h  platform.h
.claude/agents/: TestMate.agent.md
cb/: cb_file.c  cb_file.h  cb_math.c  cb_math.h  cb_net.c  cb_net.h  cb_str.c  cb_str.h  cb_vector.c  cb_vector.h
cbridge/: file.h  math.c  math.h  net.h  string.h  vector.c  vector.h
cmake/: BuildTypes.cmake  Clang-LLVM.cmake  CodeCoverage.cmake  MSYS2-UCRT64.cmake  MinGW.cmake  README.md  Sanitizers.cmake  StaticAnalysis.cmake  macOS-Clang.cmake
ct/: ct_array2d.cpp  ct_array2d.hpp  ct_array2d.tpp  ct_array3d.cpp  ct_array3d.hpp  ct_array3d.tpp  ct_core.cpp  ct_core.hpp  ct_core.tpp  ct_csv.cpp  ct_csv.hpp  ct_csv.tpp  ct_dataframe.cpp  ct_dataframe.hpp  ct_file.cpp  ct_file.hpp  ct_ini.cpp  ct_ini.hpp  ct_json.cpp  ct_json.hpp  ct_log.cpp  ct_log.hpp  ct_math.cpp  ct_math.hpp  ct_math.tpp  ct_net.cpp  ct_net.hpp  ct_num.cpp  ct_num.hpp  ct_num.tpp  ct_str.cpp  ct_str.hpp  ct_str.tpp  ct_sys.cpp  ct_sys.hpp  ct_time.cpp  ct_time.hpp  ct_unit.cpp  ct_unit.hpp
ct/ct_dataframe/: df_column.hpp  df_core.hpp  df_core.tpp  df_filter.hpp  df_filter.tpp  df_io.hpp  df_io.tpp  df_types.hpp
ctool/: array2d.hpp  array2d.tpp  array3d.cpp  array3d.hpp  core.hpp  core.tpp  csv.hpp  csv.tpp  dataframe.cpp  dataframe.hpp  file.cpp  file.hpp  ini.hpp  json.cpp  json.hpp  log.cpp  log.hpp  math.cpp  math.hpp  math.tpp  net.cpp  net.hpp  num.cpp  num.hpp  num.tpp  string.hpp  string.tpp  sys.cpp  sys.hpp  time.cpp  time.hpp  unit.cpp  unit.hpp
ctool/dataframe/: df_column.hpp  df_core.hpp  df_core.tpp  df_filter.hpp  df_types.hpp
doc/: README.md  array3d.md  cb_file.md  cb_math.md  cb_net.md  cb_str.md  cb_vector.md  ct_array2d.md  ct_array3d.md  ct_dataframe.md  ct_ini.md  ct_json.md  ct_math.md  ct_net.md  ct_num.md  ct_unit.md  dataframe.md  df_types.hpp  direct_source_usage.md  dll_usage.md  file.md  ini.md  net.md  num.md  unit.md
doc/cbridge/: README.md  file.md  math.md
doc/ctool/: README.md  array3d.md  ct_file.md  dataframe.md  json.md  num.md  unit.md
docs/: README.md
docs/cbridge/: file.md  math.md  string.md  vector.md
docs/ctool/: README.md  array2d.md  array3d.md  arrayND.md  ct_file.md  dataframe.md  math.md  num.md
scripts/: README.md
src/: CBridge.c  CBridge.h  CTool.cpp  CTool.hpp  README.md
src/cbridge/: file.c  file.h  math.c  math.h  net.c  net.h  string.c  string.h  vector.c  vector.h
src/ctool/: array2D.cpp  array2D.hpp  array2D.tpp  array2d.cpp  array2d.hpp  array3D.cpp  array3D.hpp  array3D.tpp  array3d.hpp  array3d.tpp  arrayND.cpp  arrayND.hpp  arrayND.tpp  core.cpp  core.hpp  csv.cpp  csv.hpp  csv.tpp  file.cpp  file.hpp  ini.cpp  ini.hpp  json.cpp  json.hpp  log.cpp  log.hpp  math.cpp  math.hpp  math.tpp  net.cpp  net.hpp  num.hpp  string.cpp  string.hpp  sys.hpp  time.cpp  time.hpp  unit.hpp
src/ctool/dataframe/: df_core.hpp  df_core.tpp  df_filter.tpp  df_io.hpp  df_io.tpp
src/internal/: platform.h
tests/: AGENTS.md  CMakeLists.txt  README.md  cb_str_test.cpp  ct_ini_test.cpp  ct_num_test.cpp  ct_str_test.cpp  ct_time_test.cpp  ct_unit_test.cpp
tests/cbridge/: file_test.cpp  math_test.cpp  string_test.cpp
tests/ctool/: array2d_test.cpp  array3d_test.cpp  arrayND_test.cpp  csv_test.cpp  dataframe_test.cpp  file_test.cpp  ini_test.cpp  log_test.cpp  math_test.cpp  num_test.cpp  string_test.cpp  time_test.cpp  unit_test.cpp
